log.txt
main.c:380:26: error: redefinition of typedef 'PFN_vkCmdSetDepthCompareOpEXT' with different type
  380 | typedef void (VKAPI_PTR *PFN_vkCmdSetDepthCompareOpEXT)(VkCommandBuffer, uint32_t);
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:/VulkanSDK/1.4.341.1/Include/vulkan/vulkan.h:11,
                 from C:/msys64/mingw64/include/GLFW/glfw3.h:111,
                 from main.c:10:
C:/VulkanSDK/1.4.341.1/Include/vulkan/vulkan_core.h:18171:26: note: previous declaration of 'PFN_vkCmdSetDepthCompareOpEXT' with type 'PFN_vkCmdSetDepthCompareOpEXT' {aka 'void (*)(struct VkCommandBuffer_T *, VkCompareOp)'}
18171 | typedef void (VKAPI_PTR *PFN_vkCmdSetDepthCompareOpEXT)(VkCommandBuffer commandBuffer, VkCompareOp depthCompareOp);
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.c: In function 'vibe_record_commands':
main.c:424:81: error: 'RenderThreadInit' has no member named 'pfnSetCullMode'
  424 |     PFN_vkCmdSetCullModeEXT vkCmdSetCullModeEXT = (PFN_vkCmdSetCullModeEXT)g_wsi.pfnSetCullMode;
      |                                                                                 ^
main.c:425:102: error: 'RenderThreadInit' has no member named 'pfnSetDepthTestEnable'
  425 |     PFN_vkCmdSetDepthTestEnableEXT vkCmdSetDepthTestEnableEXT = (PFN_vkCmdSetDepthTestEnableEXT)g_wsi.pfnSetDepthTestEnable;
      |                                                                                                      ^
main.c:426:105: error: 'RenderThreadInit' has no member named 'pfnSetDepthWriteEnable'
  426 |     PFN_vkCmdSetDepthWriteEnableEXT vkCmdSetDepthWriteEnableEXT = (PFN_vkCmdSetDepthWriteEnableEXT)g_wsi.pfnSetDepthWriteEnable;
      |                                                                                                         ^
main.c:427:99: error: 'RenderThreadInit' has no member named 'pfnSetDepthCompareOp'
  427 |     PFN_vkCmdSetDepthCompareOpEXT vkCmdSetDepthCompareOpEXT = (PFN_vkCmdSetDepthCompareOpEXT)g_wsi.pfnSetDepthCompareOp;
      |                                
